--- a/Green_S9_Group_project/src/app/admin/profile/profile.page.html
+++ b/Green_S9_Group_project/src/app/admin/profile/profile.page.html
@@ -19,7 +19,8 @@
 
   <ion-grid *ngIf="!isLoading && user">
     <ion-row>
-      <ion-col>
+      <img src="assets/profile.png" alt="">
+      <ion-col class="list">
         <ion-list>
 
           <ion-item>
