--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/diseases/remedy-disease/remedy-disease.page.scss
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/diseases/remedy-disease/remedy-disease.page.scss
@@ -16,10 +16,12 @@ ion-card-content{
   }
   p{
     padding: 5px;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     color: black;
   }
 }
 ion-card{
   box-shadow: 1px 1px 5px black;
+  background-color: white;
+  margin-top: 15px;
 }
