--- a/Green_S9_Group_project/src/app/dashboard/profile/reset-password/reset-password.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/profile/reset-password/reset-password.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/dashboard/tabs/profile"> </ion-back-button>
     </ion-buttons>
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-grid *ngIf="!isLoading">
     <ion-row>
-      <ion-col>
+      <ion-col class="list">
         <form [formGroup]="form" (ngSubmit)="SubmittedForm()">
           <ion-item>
             <ion-label position="floating">Current Password</ion-label>
@@ -31,8 +31,8 @@
               type="text"
               formControlName="newPassword"
               lines="none"
-              minlength="5"
-            ></ion-input>
+              minlength="5">
+            </ion-input>
           </ion-item>
           <ion-item *ngIf="form.get('newPassword').inValid">
             <p>Please Enter New Password</p>
@@ -44,9 +44,9 @@
                 type="submit"
                 color="success"
                 expand="full"
-                [disabled]="!form.valid"
-                >Update</ion-button
-              >
+                [disabled]="!form.valid">
+                Update
+              </ion-button>
             </ion-col>
           </ion-row>
         </form>
