--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/add-intervention/add-intervention.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/add-intervention/add-intervention.page.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header >
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button
         [defaultHref]="['/admin','tabs','home',crop.name,'animal-intervention']"
@@ -22,6 +22,7 @@
           [formGroup]="form"
           (ngSubmit)="SubmittedForm()"
           enctype="multipart/form-data"
+          class="list"
         >
           <ion-item>
             <ion-label position="floating">Intervention Name</ion-label>
