--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.html
@@ -25,7 +25,7 @@
     </ion-row>
 
     <ion-row>
-      <ion-col class="img">
+      <ion-col class="img-io">
         <ion-toolbar color="primary" class="sawbar">
           <ion-title class="text-center">Animal Intervention Names</ion-title>
         </ion-toolbar>
@@ -34,7 +34,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-list *ngIf="interventions && interventions.length >= 0">
+        <ion-list *ngIf="interventions && interventions.length >= 0" class="name">
           <ion-item-sliding *ngFor="let intervention of interventions" #item>
             <ion-item [routerLink]="['/admin','tabs','home',crop.name,'animal-intervention','view',intervention.interventionId]">
               <ion-label>{{intervention.interventionName}}</ion-label>
