--- a/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.scss
+++ b/Green_S9_Group_project/src/app/admin/home/crop/animal-intervention/animal-intervention.page.scss
@@ -12,6 +12,17 @@
     }
 
     ion-img{
-        height: 100px;
+        height: 90px;
+    }
+}
+.img-io{
+    margin-top: 15px;
+}
+
+.name{
+    padding-top: 10px;
+
+    ion-label{
+        font-size: 1.2rem;
     }
 }
