--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.html
@@ -36,22 +36,18 @@
     </ion-row>
 
     <ion-row>
-      <ion-col class="img">
-        <ion-toolbar color="primary" class="sawbar"> </ion-toolbar>
-
+      <ion-col class="img-ion">
         <ion-list *ngFor="let saw of cropTips ">
           <ion-item-sliding #item>
-            <ion-item
-              [routerLink]="['/admin','tabs','home',crop.name,'crop-tips','show',saw.tipsId]"
-            >
-              <p>{{saw.information}}</p>
+            <ion-item class="info"
+              [routerLink]="['/admin','tabs','home',crop.name,'crop-tips','show',saw.tipsId]">
+              <p style="font-size: 1.4rem;">{{saw.information}}</p>
             </ion-item>
 
             <ion-item-options side="start">
               <ion-item-option
                 color="danger"
-                (click)="deleteTip(saw.tipsId,item)"
-              >
+                (click)="deleteTip(saw.tipsId,item)">
                 <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
               </ion-item-option>
             </ion-item-options>
