--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.scss
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/crop-tips.page.scss
@@ -18,7 +18,18 @@ ion-card-title{
   }
 
   ion-img{
-      height: 100px;
+      height: 90px;
   }
+}
+
+img-ion{
+  margin-top: 50px;
+  
+}
+
+.info{
+
+  margin-top: 20px;
+  
 }
 
