--- a/Green_S9_Group_project/src/app/admin/home/crop/diseases/add-disease/add-disease.page.html
+++ b/Green_S9_Group_project/src/app/admin/home/crop/diseases/add-disease/add-disease.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/admin/tabs/home/disease"></ion-back-button>
     </ion-buttons>
@@ -11,14 +11,13 @@
   <ion-grid *ngIf="!isLoading">
     <ion-row>
       <ion-col>
-        <form [formGroup]="form" (ngSubmit) = 'SubmittedForm()' enctype="multipart/form-data">
+        <form [formGroup]="form" (ngSubmit) = 'SubmittedForm()' enctype="multipart/form-data" class="list">
           <ion-item>
             <ion-label position="floating">Disease Name</ion-label>
             <ion-input
               type="text"
               lines="none"
-              formControlName="diseaseName"
-            ></ion-input>
+              formControlName="diseaseName"></ion-input>
           </ion-item>
           <ion-item *ngIf="form.get('diseaseName').inValid">
             <p>Please Enter Disease Name</p>
