--- a/Green_S9_Group_project/src/app/admin/home/crop/diseases/add-disease/add-disease.page.scss
+++ b/Green_S9_Group_project/src/app/admin/home/crop/diseases/add-disease/add-disease.page.scss
@@ -10,3 +10,19 @@
   color: white;
   padding: 0% !important;
 }
+
+.list{
+  margin-top: 40px;
+
+  ion-label{
+      font-size: 1.4rem;
+  }
+  ion-input{
+      font-size: 1.4rem;
+  }
+  ion-button{
+      margin-top: 20px;
+      height: 50px;
+      font-size: 1.2rem;
+  }
+}
