--- a/Green_S9_Group_project/src/app/dashboard/profile/profile.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/profile/profile.page.html
@@ -18,17 +18,18 @@
 
   <ion-grid *ngIf="!isLoading && user">
     <ion-row>
-      <ion-col>
+      <img src="assets/profile.png" alt="">
+      <ion-col class="list">
         <ion-list>
           <ion-item>
             <ion-label>
-              <ion-text class="date"> YourName: {{user.yourName}} </ion-text>
+              <ion-text class="date"> Your Name: {{user.yourName}} </ion-text>
             </ion-label>
           </ion-item>
 
           <ion-item>
             <ion-label>
-              <ion-text class="date"> UserName: {{user.userName}} </ion-text>
+              <ion-text class="date"> Username: {{user.userName}} </ion-text>
             </ion-label>
           </ion-item>
 
@@ -46,7 +47,7 @@
 
           <ion-item>
             <ion-label>
-              <ion-text class="date">Mobile: {{user.mobile}} </ion-text>
+              <ion-text class="date">Mobile No: {{user.mobile}} </ion-text>
             </ion-label>
           </ion-item>
 
