--- a/Green_S9_Group_project/src/app/dashboard/dashboard.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/dashboard.page.html
@@ -16,12 +16,12 @@
 
           <ion-item lines="none" routerLink="/dashboard/tabs/profile">
             <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-            <ion-label>Profile</ion-label>
+            <ion-label>{{'Dashboard.Menu.Profile' | translate}}</ion-label>
           </ion-item>
 
           <ion-item lines="none" (click)="logout()">
             <ion-icon name="home-outline" slot="start"></ion-icon>
-            <ion-label>LogOut</ion-label>
+            <ion-label>{{'Dashboard.Menu.LogOut' | translate}}</ion-label>
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
