--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.html
@@ -40,7 +40,7 @@
         <ion-card [routerLink]="['/dashboard','tabs','home',crop.name,'crop-tips']">
 
           <ion-img src="assets//project_images/croptips.jpg"></ion-img><br>
-          <ion-card-title> Crop Tips </ion-card-title>
+          <ion-card-title> {{"Dashboard.CropCultivation.Crop_Tips"|translate}}</ion-card-title>
 
         </ion-card>
       </ion-col>
@@ -51,7 +51,7 @@
         <ion-card [routerLink]="['/dashboard','tabs','home',crop.name,'diseases']">
 
           <ion-img style = " width: 150px; height: 150px;" src="assets//project_images/disease.jpg"></ion-img><br>
-          <ion-card-title> Diseases </ion-card-title>
+          <ion-card-title> {{"Dashboard.CropCultivation.Diseases"|translate}} </ion-card-title>
 
         </ion-card>
       </ion-col>
@@ -59,7 +59,7 @@
       <ion-col>
         <ion-card [routerLink]="['/dashboard','tabs','home',crop.name,'animal-intervention']">
           <ion-img style=" width: 150px; height: 150px;" src="assets//project_images/grasshoper.jpg"></ion-img>
-          <ion-card-title> Animal <br> Intervention</ion-card-title>
+          <ion-card-title> {{"Dashboard.CropCultivation.Animal"|translate}} <br> {{"Dashboard.CropCultivation.Intervention"|translate}}</ion-card-title>
 
           <!--<ion-card-title>{{"Dashboard.CropCultivation.Animal_Intervention"|translate}}</ion-card-title>-->
 
@@ -67,6 +67,6 @@
       </ion-col>
     </ion-row>
 
-    
+
   </ion-grid>
 </ion-content>
