translated cropcultivation and home page

--- a/Green_S9_Group_project/src/app/dashboard/home/home.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/home.page.html
@@ -49,8 +49,8 @@
       </ion-item>
 
       <ion-item lines="none">
-        <span>Minimum Temp</span>
-        <!--<span>{{"Dashboard.Home.Minimun_Temp" | translate}}</span>-->
+        <!-- <span>Minimum Temp</span> -->
+        <span>{{"Dashboard.Home.Minimun_Temp" | translate}}</span>
         <span slot="end">{{(min_temp - 273.15).toFixed(0)}}℃</span>
       </ion-item>
 
