--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/cropcultivation.page.html
@@ -29,44 +29,58 @@
     <ion-row class="details">
       <ion-col>
         <ion-card
-          [routerLink]="['/dashboard','tabs','home',crop.name,'fertilizer-calculator']">
+          [routerLink]="['/dashboard','tabs','home',crop.name,'fertilizer-calculator']"
+        >
           <ion-img src="assets//project_images/fert.jpg"></ion-img>
 
-          <ion-card-title>{{"Dashboard.CropCultivation.Fertilizer_Calculator"|translate}}</ion-card-title>
+          <ion-card-title
+            >{{"Dashboard.CropCultivation.Fertilizer_Calculator"|translate}}</ion-card-title
+          >
         </ion-card>
       </ion-col>
 
       <ion-col>
-        <ion-card [routerLink]="['/dashboard','tabs','home',crop.name,'crop-tips']">
-
-          <ion-img src="assets//project_images/croptips.jpg"></ion-img><br>
-          <ion-card-title> Crop Tips </ion-card-title>
-
+        <ion-card
+          [routerLink]="['/dashboard','tabs','home',crop.name,'crop-tips']"
+        >
+          <ion-img src="assets//project_images/croptips.jpg"></ion-img><br />
+          <ion-card-title>
+            {{"Dashboard.CropCultivation.Crop_Tips"|translate}}
+          </ion-card-title>
         </ion-card>
       </ion-col>
     </ion-row>
 
     <ion-row class="details">
       <ion-col>
-        <ion-card [routerLink]="['/dashboard','tabs','home',crop.name,'diseases']">
-
-          <ion-img style = " width: 150px; height: 150px;" src="assets//project_images/disease.jpg"></ion-img><br>
-          <ion-card-title> Diseases </ion-card-title>
-
+        <ion-card
+          [routerLink]="['/dashboard','tabs','home',crop.name,'diseases']"
+        >
+          <ion-img
+            style="width: 150px; height: 150px"
+            src="assets//project_images/disease.jpg"
+          ></ion-img
+          ><br />
+          <ion-card-title>
+            {{"Dashboard.CropCultivation.Diseases"|translate}}</ion-card-title
+          >
         </ion-card>
       </ion-col>
 
       <ion-col>
-        <ion-card [routerLink]="['/dashboard','tabs','home',crop.name,'animal-intervention']">
-          <ion-img style=" width: 150px; height: 150px;" src="assets//project_images/grasshoper.jpg"></ion-img>
-          <ion-card-title> Animal <br> Intervention</ion-card-title>
-
-          <!--<ion-card-title>{{"Dashboard.CropCultivation.Animal_Intervention"|translate}}</ion-card-title>-->
-
+        <ion-card
+          [routerLink]="['/dashboard','tabs','home',crop.name,'animal-intervention']"
+        >
+          <ion-img
+            style="width: 150px; height: 150px"
+            src="assets//project_images/grasshoper.jpg"
+          ></ion-img>
+          <ion-card-title>
+            {{"Dashboard.CropCultivation.Animal"|translate}} <br />
+            {{"Dashboard.CropCultivation.Intervention"|translate}}</ion-card-title
+          >
         </ion-card>
       </ion-col>
     </ion-row>
-
-    
   </ion-grid>
 </ion-content>
