--- a/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/addtip/addtip.page.scss
+++ b/Green_S9_Group_project/src/app/admin/home/crop/crop-tips/addtip/addtip.page.scss
@@ -15,3 +15,19 @@
         height: 90px;
     }
 }
+
+.list{
+    margin-top: 40px;
+  
+    ion-label{
+        font-size: 1.4rem;
+    }
+    ion-input{
+        font-size: 1.4rem;
+    }
+    ion-button{
+        margin-top: 20px;
+        height: 50px;
+        font-size: 1.2rem;
+    }
+  }
