--- a/Green_S9_Group_project/src/app/dashboard/dashboard.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/dashboard.page.html
@@ -2,9 +2,7 @@
   <ion-menu side="start" contentId="main" menuId="owner">
     <ion-header>
       <ion-toolbar color="danger">
-        <ion-title>
-          Green Live
-        </ion-title>
+        <ion-title> Green Live </ion-title>
       </ion-toolbar>
     </ion-header>
 
@@ -16,15 +14,10 @@
             <ion-label>{{'Dashboard.Menu.Home'| translate}}</ion-label>
           </ion-item>
 
-          <!-- <ion-item lines="none" routerLink="/dashboard/tabs/notification">
+          <ion-item lines="none" routerLink="/dashboard/tabs/notification">
             <ion-icon name="notifications-outline" slot="start"></ion-icon>
             <ion-label>Notification</ion-label>
           </ion-item>
-
-          <ion-item lines="none" routerLink="/dashboard/tabs/card">
-            <ion-icon name="card" slot="start"></ion-icon>
-            <ion-label>Card</ion-label>
-          </ion-item> -->
 
           <ion-item lines="none" routerLink="/dashboard/tabs/profile">
             <ion-icon name="person-circle-outline" slot="start"></ion-icon>
@@ -48,13 +41,9 @@
         <ion-icon name="home"></ion-icon>
       </ion-tab-button>
 
-      <!-- <ion-tab-button tab="notification">
+      <ion-tab-button tab="notification">
         <ion-icon name="notifications-outline"></ion-icon>
       </ion-tab-button>
-
-      <ion-tab-button tab="card">
-        <ion-icon name="card"></ion-icon>
-      </ion-tab-button> -->
 
       <ion-tab-button tab="profile">
         <ion-icon name="person-circle-outline"></ion-icon>
