--- a/Green_S9_Group_project/src/app/dashboard/profile/profile.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/profile/profile.page.html
@@ -51,7 +51,7 @@
             </ion-label>
           </ion-item>
 
-          <ion-button color="primary" expand="block" routerLink="/dashboard/tabs/profile/reset-password">Reset Password</ion-button>
+          <!-- <ion-button color="primary" expand="block" routerLink="/dashboard/tabs/profile/reset-password">Reset Password</ion-button> -->
         </ion-list>
       </ion-col>
     </ion-row>
