--- a/Green_S9_Group_project/src/app/admin/admin.page.html
+++ b/Green_S9_Group_project/src/app/admin/admin.page.html
@@ -13,13 +13,11 @@
             <ion-icon name="home" slot="start"></ion-icon>
             <ion-label>Home</ion-label>
           </ion-item>
-<!--
+
           <ion-item lines="none" routerLink="/admin/tabs/notification">
             <ion-icon name="notifications-outline" slot="start"></ion-icon>
             <ion-label>Notification</ion-label>
-          </ion-item> -->
-
-
+          </ion-item>
 
           <ion-item lines="none" routerLink="/admin/tabs/profile">
             <ion-icon name="person-circle-outline" slot="start"></ion-icon>
@@ -42,12 +40,10 @@
       <ion-tab-button tab="home">
         <ion-icon name="home"></ion-icon>
       </ion-tab-button>
-<!--
+
       <ion-tab-button tab="notification">
         <ion-icon name="notifications-outline"></ion-icon>
-      </ion-tab-button> -->
-
-
+      </ion-tab-button>
 
       <ion-tab-button tab="profile">
         <ion-icon name="person-circle-outline"></ion-icon>
