--- a/Green_S9_Group_project/src/app/dashboard/notification/notification.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/notification/notification.page.html
@@ -18,6 +18,22 @@
 
   <ion-grid *ngIf="!isLoading && notifications.length >0">
     <ion-row>
+      <ion-toolbar color="success">
+        <ion-segment (ionChange)="segmentChanged($event)"  value="[(value)]">
+          <ion-segment-button value="All">
+            <ion-label>All</ion-label>
+          </ion-segment-button>
+          <ion-segment-button value="mine">
+            <ion-label>My Messages</ion-label>
+          </ion-segment-button>
+          <ion-segment-button value="replied">
+            <ion-label>Old Messages</ion-label>
+          </ion-segment-button>
+        </ion-segment>
+      </ion-toolbar>
+    </ion-row>
+
+    <ion-row>
       <ion-col>
         <ion-list>
           <ion-item-sliding
