--- a/Green_S9_Group_project/src/app/admin/notification/notification.page.html
+++ b/Green_S9_Group_project/src/app/admin/notification/notification.page.html
@@ -2,7 +2,6 @@
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-
     </ion-buttons>
     <ion-title>Notification</ion-title>
   </ion-toolbar>
@@ -20,31 +19,51 @@
   <ion-grid *ngIf="!isLoading && notifications.length >0">
     <ion-row>
       <ion-toolbar color="success">
-        <ion-segment (ionChange)="segmentChanged($event)" [(ngModel)]="message"  value='All'>
-          <ion-segment-button value="All">
+        <ion-segment
+          (ionChange)="segmentChanged($event)"
+          [(ngModel)]="messageTerm"
+          value="false"
+        >
+          <ion-segment-button value="false">
             <ion-label>New Messages</ion-label>
           </ion-segment-button>
-          <ion-segment-button value="replied">
+          <ion-segment-button value="true">
             <ion-label>Old Messages</ion-label>
           </ion-segment-button>
         </ion-segment>
       </ion-toolbar>
     </ion-row>
-    <ion-row>
+
+    <ion-row *ngIf="messageTerm">
       <ion-col>
-        <ion-list *ngFor="let notification of notifications">
-          <ion-item >
-            <ion-label >
+        <ion-list  *ngFor="let notification of notifications| filter: messageTerm ">
+          <ion-item>
+            <ion-label>
               <ion-text class="date"> {{notification.date}} </ion-text>
 
               <ion-text class="message"> {{notification.message}} </ion-text>
             </ion-label>
           </ion-item>
         </ion-list>
-
-
       </ion-col>
     </ion-row>
-  </ion-grid>
 
+    <ion-row *ngIf="!messageTerm">
+      <ion-col>
+        <ion-list  *ngFor="let notification of notifications | filter: messageTerm ">
+          <ion-item>
+            <ion-label>
+              <ion-text class="date"> {{notification.date}} </ion-text>
+
+              <ion-text class="message"> {{notification.message}} </ion-text>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+
+
+
+  </ion-grid>
 </ion-content>
