--- a/Green_S9_Group_project/src/app/admin/notification/notification.page.html
+++ b/Green_S9_Group_project/src/app/admin/notification/notification.page.html
@@ -34,36 +34,18 @@
       </ion-toolbar>
     </ion-row>
 
-    <ion-row *ngIf="messageTerm">
+    <ion-row>
       <ion-col>
-        <ion-list  *ngFor="let notification of notifications| filter: messageTerm ">
-          <ion-item>
-            <ion-label>
-              <ion-text class="date"> {{notification.date}} </ion-text>
+        <ion-list
+          *ngFor="let notification of notifications| filter: messageTerm "
+        >
+          <ion-item lines="none" [routerLink] = "['/admin','tabs','notification','view',notification.notificationId]">
+            <div>{{notification.date | date}}</div>
 
-              <ion-text class="message"> {{notification.message}} </ion-text>
-            </ion-label>
+            <div > {{notification.message}} </div>
           </ion-item>
         </ion-list>
       </ion-col>
     </ion-row>
-
-    <ion-row *ngIf="!messageTerm">
-      <ion-col>
-        <ion-list  *ngFor="let notification of notifications | filter: messageTerm ">
-          <ion-item>
-            <ion-label>
-              <ion-text class="date"> {{notification.date}} </ion-text>
-
-              <ion-text class="message"> {{notification.message}} </ion-text>
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-
-
-
-
   </ion-grid>
 </ion-content>
