--- a/Green_S9_Group_project/src/app/admin/notification/view/view.page.html
+++ b/Green_S9_Group_project/src/app/admin/notification/view/view.page.html
@@ -4,21 +4,53 @@
       <ion-back-button defaultHref="/admin/tabs/notification"></ion-back-button>
     </ion-buttons>
     <ion-title *ngIf="isLoading">Loading...</ion-title>
-    <ion-title *ngIf="!isLoading">{{notification.userId}}</ion-title>
+    <ion-title *ngIf="!isLoading">{{user.yourName}} </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-grid *ngIf="isLoading">
-    <ion-spinner color="primary" class="text-center"></ion-spinner>
+    <ion-spinner color="primary"></ion-spinner>
   </ion-grid>
 
   <ion-grid *ngIf="!isLoading">
     <ion-row>
       <ion-col>
-        <ion-item>
-          {{notification.message}}
-        </ion-item>
+        <ion-card class="bg-light">
+          <ion-card-header> {{notification.date | date}} </ion-card-header>
+          <ion-card-content>{{notification.message}}</ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+
+    <ion-row *ngIf="reply">
+      <ion-col>
+        <form (ngSubmit)="submitForm(form)" #form="ngForm">
+          <ion-textarea
+            rows="5"
+            ngModel
+            name="replyMessage"
+            required
+            placeholder="Enter Reply"
+            class="bg-light mb-2"
+          ></ion-textarea>
+
+          <ion-button type="submit" expand="block" color="primary"
+            >Submit</ion-button
+          >
+        </form>
+      </ion-col>
+    </ion-row>
+
+    <ion-row *ngIf="!notification.reply && !reply" [(ngModel)]="reply">
+      <ion-col>
+        <ion-button
+          type="button"
+          expand="block"
+          color="primary"
+          (click)="changeReplyMode()"
+          >Reply</ion-button
+        >
       </ion-col>
     </ion-row>
   </ion-grid>
