--- a/Green_S9_Group_project/src/app/dashboard/notification/notification.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/notification/notification.page.html
@@ -19,14 +19,18 @@
   <ion-grid *ngIf="!isLoading && notifications.length >0">
     <ion-row>
       <ion-toolbar color="success">
-        <ion-segment (ionChange)="segmentChanged($event)"  value="[(value)]">
-          <ion-segment-button value="All">
+        <ion-segment
+          (ionChange)="segmentChanged($event)"
+          [(ngModel)]="messageTerm"
+          value="false"
+        >
+          <ion-segment-button value="false">
             <ion-label>All</ion-label>
           </ion-segment-button>
-          <ion-segment-button value="mine">
+          <ion-segment-button value=`${userId}`>
             <ion-label>My Messages</ion-label>
           </ion-segment-button>
-          <ion-segment-button value="replied">
+          <ion-segment-button value="true">
             <ion-label>Old Messages</ion-label>
           </ion-segment-button>
         </ion-segment>
@@ -35,74 +39,25 @@
 
     <ion-row>
       <ion-col>
-        <ion-list>
-          <ion-item-sliding
-            #item
-            *ngFor="let notification of notifications; let i=index"
+        <ion-list #item *ngFor="let notification of notifications | filter: messageTerm; let i=index">
+          <ion-item
+            [routerLink]="['/dashboard','tabs','notification','view',notification.notificationId]"
           >
-            <ion-item
-              [routerLink]="['/dashboard','tabs','notification','view',notification.notificationId]"
-            >
-              <ion-avatar slot="start">
-                <ion-img [src]="userIcons[i]"></ion-img>
-              </ion-avatar>
-              <div class="div">
-                <label class="date">
-                  <ion-note
-                    >{{notification.date | date: "EEE dd MMM"}}</ion-note
-                  >
-                </label>
+            <ion-avatar slot="start">
+              <ion-img [src]="userIcons[i]"></ion-img>
+            </ion-avatar>
+            <div class="div">
+              <label class="date">
+                <ion-note>{{notification.date | date}}</ion-note>
+              </label>
 
-                <label class="message">
-                  <p>{{notification.message}}</p>
-                </label>
+              <label class="message">
+                <p>{{notification.message}}</p>
+              </label>
 
-                <label class="user"></label>
-              </div>
-            </ion-item>
-
-            <ion-item-options >
-              <ion-item-option color="primary" [routerLink]="['/dashboard','tabs','notification','edit',notification.notificationId]">
-                <ion-icon
-                  slot="start"
-                  name="create"
-                  slot="icon-only"
-                ></ion-icon>
-              </ion-item-option>
-
-              <ion-item-option
-                color="danger"
-                (click)="delete(notification.notificationId,item)"
-              >
-                <ion-icon slot="end" name="trash" slot="icon-only"></ion-icon>
-              </ion-item-option>
-            </ion-item-options>
-          </ion-item-sliding>
-          <!--
-          <ion-item-sliding *ngFor="let product of products  | filter:searchTerm" #item>
-            <ion-item [routerLink]="['/owner','tabs','products',product.productId]" detail>
-              <ion-thumbnail slot="start">
-                <ion-img [src]="product.image"></ion-img>
-              </ion-thumbnail>
-              <ion-label>
-                <h3>
-                  <b>{{product.name}}</b>
-                </h3>
-                <p>
-                  Price : <b>{{product.price}}</b>
-                </p>
-                <p>
-                  Category: <b>{{product.category}}</b>
-                </p>
-              </ion-label>
-            </ion-item>
-
-            <ion-item-options>
-              <ion-item-option color="primary" (click)="EditProduct(product.productId,item)">
-                <ion-icon name="create" slot="icon-only"></ion-icon>
-              </ion-item-option>
-            </ion-item-options>
-          </ion-item-sliding> -->
+              <label class="user"></label>
+            </div>
+          </ion-item>
         </ion-list>
       </ion-col>
     </ion-row>
