create model page

--- a/Green_S9_Group_project/src/app/admin/admin.page.html
+++ b/Green_S9_Group_project/src/app/admin/admin.page.html
@@ -26,6 +26,11 @@
             <ion-label>Profile</ion-label>
           </ion-item>
 
+          <ion-item lines="none" (click)="addZone()" expand="block" type="button">
+            <ion-icon name="create" slot="start"></ion-icon>
+            <ion-label>Add Zone</ion-label>
+          </ion-item>
+
           <ion-item lines="none" (click)="logout()">
             <ion-icon name="home-outline" slot="start"></ion-icon>
             <ion-label>LogOut</ion-label>
