--- a/Green_S9_Group_project/src/app/register/register.page.html
+++ b/Green_S9_Group_project/src/app/register/register.page.html
@@ -10,50 +10,50 @@
       <ion-row>
         <ion-col size-sm="6" offset-sm="3" size="10" offset="1">
           <ion-list lines="none">
-            <ion-item>
+            <ion-item  lines="none">
                 <img src="assets/logo.png" alt="logo.png">
             </ion-item>
 
-            <ion-item>
-              <ion-input type="text" required  name="username" lines="none" ngModel #username="ngModel" placeholder="User Name"></ion-input>
+            <ion-item  lines="none">
+              <ion-input type="text" required  name="username" lines="none" ngModel #username="ngModel" placeholder="Username"></ion-input>
             </ion-item>
             <ion-item *ngIf="!username.valid && username.touched" lines="none">
               <p>Please Enter the User Name</p>
             </ion-item>
 
-            <ion-item>
+            <ion-item  lines="none">
               <ion-input type="text" required  name="yourname" lines="none" ngModel #yourname="ngModel" placeholder="Your Name"></ion-input>
             </ion-item>
             <ion-item *ngIf="!yourname.valid && yourname.touched" lines="none">
               <p>Please Enter the Your Name</p>
             </ion-item>
 
-            <ion-item>
+            <ion-item  lines="none">
               <ion-input type="text" required  name="mobile" lines="none" ngModel #mobile="ngModel" placeholder="Mobile No"></ion-input>
             </ion-item>
             <ion-item *ngIf="!mobile.valid && mobile.touched" lines="none">
               <p>Please Enter the Mobile Number</p>
             </ion-item>
 
-            <ion-item>
-              <ion-input type="text" required  name="nic" lines="none" ngModel #nic="ngModel" placeholder="Nic No"></ion-input>
+            <ion-item  lines="none">
+              <ion-input type="text" required  name="nic" lines="none" ngModel #nic="ngModel" placeholder="Nic"></ion-input>
             </ion-item>
             <ion-item *ngIf="!nic.valid && nic.touched" lines="none">
               <p>Please Enter the Nic Number</p>
             </ion-item>
 
-            <ion-item>
-              <ion-input type="text" required  name="address" lines="none" ngModel #address="ngModel" placeholder="Your Address"></ion-input>
+            <ion-item lines="none">
+              <ion-textarea type="text" required  name="address" lines="none" ngModel #address="ngModel" placeholder="Your Address"></ion-textarea>
             </ion-item>
             <ion-item *ngIf="!address.valid && address.touched" lines="none">
               <p>Please Enter the Address</p>
             </ion-item>
 
-            
 
-            
-            <ion-item>
-              <ion-label>Section</ion-label>
+
+
+            <ion-item  lines="none">
+              <ion-label class="select">Zone</ion-label>
               <ion-select [interfaceOptions]="customAlertOptions" interface="alert" name ='zone' ngModel  required #zone="ngModel">
                 <ion-select-option *ngFor="let zone of zones" [value]="zone">
                   {{zone}}
@@ -63,9 +63,9 @@
             <ion-item *ngIf="!zone.valid && zone.touched" lines="none">
               <ion-label>Zone Should be Valided</ion-label>
             </ion-item>
-          
 
-            <ion-item>
+
+            <ion-item  lines="none">
               <ion-input type="text"  minlength="6"   required password name="password" ngModel #password="ngModel" placeholder="Password"></ion-input>
             </ion-item>
             <ion-item *ngIf="!password.valid && password.touched" lines="none">
