--- a/Green_S9_Group_project/src/app/register/register.page.scss
+++ b/Green_S9_Group_project/src/app/register/register.page.scss
@@ -2,7 +2,7 @@
 ion-content{
 
     --ion-background-color:#9FE6AF;
-  
+
 }
 
 ion-label{
@@ -33,6 +33,28 @@ ion-title{
 ion-button
 {
     margin-top: 15px;
+}
+
+ion-textarea{
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  padding-left: 30px !important;
+  font-size: 1.3em;
+
+}
+ion-select{
+  padding: 2%;
+  background-color: white;
+  margin: 0%;
+}
+.select{
+  padding: 0%;
+  background-color: white;
+  font-size: 1.3em;
+  text-align: left;
+  padding-left: 30px !important;
+  color: rgb(188, 137, 137);
 }
 
 
