--- a/Green_S9_Group_project/src/app/admin/admin.page.html
+++ b/Green_S9_Group_project/src/app/admin/admin.page.html
@@ -26,7 +26,7 @@
             <ion-label>Profile</ion-label>
           </ion-item>
 
-          <ion-item lines="none" (click)="addZone()" expand="block" type="button">
+          <ion-item lines="none" routerLink="/admin/tabs/home/add-zone">
             <ion-icon name="create" slot="start"></ion-icon>
             <ion-label>Add Zone</ion-label>
           </ion-item>
