--- a/Green_S9_Group_project/src/app/admin/notification/notification.page.scss
+++ b/Green_S9_Group_project/src/app/admin/notification/notification.page.scss
@@ -3,14 +3,26 @@
   padding: 0%;
 }
 
-ion-item {
-  margin-top: 0.5rem;
-  border: 0.5px solid black;
-  display: flex;
-  flex-wrap: wrap;
-  padding:0%;
-  padding-bottom: 10px;
+ion-card {
+  height:  auto;
+  margin-top: 0.6rem;
+  background-color: white;
+  margin-inline: 0.5rem;
+  box-shadow: 0px 0px 10px black;
+
+  ion-card-header {
+
+    display: flex;
+    justify-content: end;
+    ion-card-title {
+      margin-top: 0.2rem;
+      margin-right: 0.2rem;
+      font-size: medium;
+    }
+  }
+
+  ion-card-content {
+    font-size: x-large;
+    padding: 0.5rem;
+  }
 }
-
-
-
