modified some errors

--- a/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/animal-intervention/view/view.page.html
+++ b/Green_S9_Group_project/src/app/dashboard/home/cropcultivation/animal-intervention/view/view.page.html
@@ -23,19 +23,19 @@
           <ion-toolbar color="primary" class="text-center my-2">About</ion-toolbar>
           <ion-item>{{intervention.about}}</ion-item>
 
-          <ion-toolbar color="success" class="text-center my-2">How To Identify</ion-toolbar>
+          <ion-toolbar color="success" class="text-center my-2">How to identify</ion-toolbar>
           <ion-item>{{intervention.howToIdentify}}</ion-item>
 
-          <ion-toolbar color="danger" class="text-center my-2">How To Manage</ion-toolbar>
+          <ion-toolbar color="danger" class="text-center my-2">How to manage</ion-toolbar>
           <ion-item>{{intervention.howToManage}}</ion-item>
 
-          <ion-toolbar color="secondary" class="text-center my-2">what It Does</ion-toolbar>
+          <ion-toolbar color="secondary" class="text-center my-2">What it does</ion-toolbar>
           <ion-item>{{intervention.whatIdDoes}}</ion-item>
 
-          <ion-toolbar color="warning" class="text-center my-2">why And Where It Occours</ion-toolbar>
+          <ion-toolbar color="warning" class="text-center my-2">Why and where it occours</ion-toolbar>
           <ion-item>{{intervention.whyAndWhereItOccours}}</ion-item>
 
-          <ion-toolbar color="light" class="text-center my-2">why Is Important</ion-toolbar>
+          <ion-toolbar color="light" class="text-center my-2">Why is important</ion-toolbar>
           <ion-item>{{intervention.whyIsImportant}}</ion-item>
 
 
